more CE  options

--- a/index.html
+++ b/index.html
@@ -544,14 +544,14 @@
 			<h2>Close Encounters</h2>
 
 			<ul>
-				<li><label><input type="checkbox" id="reducedTechCosts" disabled>2. Reduced technology costs</label></li>
+				<li><label><input type="checkbox" id="updatedTechCosts" disabled>2. Updated technology costs</label></li>
 				<li><label><input type="checkbox" id="experience">3. Ship Experience and Military Academies</label></li>
 				<li><label><input type="checkbox" id="boarding">4. Boarding and Capturing Ships</label></li>
 				<li><label><input type="checkbox" id="security">5. Security Forces</label></li>
 				<li><label><input type="checkbox" id="titans">6. Titans</label></li>
-				<li><label><input type="checkbox" disabled>8. Mine Sweeper Technology</label></li>
-				<li><label><input type="checkbox" id="movement">9. Movement Technology</label></li>
-				<li><label><input type="checkbox" disabled>10. Reaction Movement</label></li>
+				<li><label><input type="checkbox" id="mineSweeper3">8. Mine Sweeper Technology 3</label></li>
+				<li><label><input type="checkbox" id="movement">9. Movement Technology 7</label></li>
+				<li><label><input type="checkbox" id="reactionMovement">10. Reaction Movement</label></li>
 				<li><label><input type="checkbox" id="fastBC">11. Fast Battlecruisers</label></li>
 				<li><label><input type="checkbox" id="groundCombat">14. Transports and Ground Combat</label></li>
 				<li><label><input type="checkbox" disabled>16. Flagships</label></li>
@@ -833,7 +833,7 @@
 						<td>
 							<span class="tech-cost">1<sub>10</sub></span>
 							<span class="tech-cost">2<sub>15</sub></span>
-							<span class="tech-cost">3<sub>20</sub></span>
+							<span class="tech-cost enable_mineSweeper3">3<sub>20</sub></span>
 						</td>
 					</tr>
 				</table>
@@ -875,7 +875,7 @@
 						<td>0</td>
 						<td>
 							<span class="tech-cost">1<sub>15</sub></span>
-							<span class="tech-cost">2<sub>15</sub></span>
+							<span class="tech-cost enable_reactionMovement">2<sub>15</sub></span>
 						</td>
 					</tr>
 					<tr class="enable_fastBC">
