--- a/index.html
+++ b/index.html
@@ -107,8 +107,12 @@
 			clear: both;
 		}
 		table.technologySheet{
-			width: 50%;
-			float: left;
+			width: 100%;
+			/*float: left;*/
+		}
+
+		div.technologySheetContainer {
+			column-count: 2;
 		}
 
 		tbody{
@@ -478,11 +482,12 @@
 				var t = template.getElementsByTagName("td")[0].innerHTML;			
 				var match = t.match(/(.*#)(\d*)/); 
 
-				for(var n = 1; n < match[2]; n++){
-					var newNode = template.cloneNode(true);
-					newNode.getElementsByTagName("td")[0].innerHTML = match[1] + n;
-					shipType.insertBefore(newNode, template);
-				}
+				if (match)
+					for(var n = 1; n < match[2]; n++){
+						var newNode = template.cloneNode(true);
+						newNode.getElementsByTagName("td")[0].innerHTML = match[1] + n;
+						shipType.insertBefore(newNode, template);
+					}
 			}
 		}
 
@@ -961,196 +966,213 @@
 	</div>
 	<div id="shipTechnologySheet">
 		<h1>Ship Technology Sheet (Circle the Current Technology Level when the Group is built)</h1>
-		<table class="technologySheet">
-			<thead>
-				<tr>
-					<th>Grp</th>
-					<th>Att</th>
-					<th>Def</th>
-					<th>Tactics</th>
-					<th>Move</th>
-					<th>Other</th>
-					<th>Exp.</th>
-				</tr>
-			</thead>
-			<tbody>
-				<tr>
-					<td>DD #6</td>
-					<td>1</td>
-					<td>1</td>
-					<td>1 2 3</td>
-					<td>2 3 4 5 6 7</td>
-					<td>Scan: 1 2</td>
-					<td>S V E L</td>
-				</tr>
-			</tbody>
-			<tbody>
-				<tr>
-					<td>CA #6</td>
-					<td>1 2</td>
-					<td>1 2</td>
-					<td>1 2 3</td>
-					<td>2 3 4 5 6 7</td>
-					<td>Exp: 1 2</td>
-					<td>S V E L</td>
-				</tr>
-			</tbody>
-			<tbody>
-				<tr>
-					<td>BC #6</td>
-					<td>1 2</td>
-					<td>1 2</td>
-					<td>1 2 3</td>
-					<td>2 3 4 5 6 7</td>
-					<td>Fast: 1</td>
-					<td>S V E L</td>
-				</tr>
-			</tbody>
-			<tbody>
-				<tr>
-					<td>BB #6</td>
-					<td>1 2 3</td>
-					<td>1 2 3</td>
-					<td>1 2 3</td>
-					<td>2 3 4 5 6 7</td>
-					<td></td>
-					<td>S V E L</td>
-				</tr>
-			</tbody>
-			<tbody>
-				<tr>
-					<td>DN #5</td>
-					<td>1 2 3</td>
-					<td>1 2 3</td>
-					<td>1 2 3</td>
-					<td>2 3 4 5 6 7</td>
-					<td></td>
-					<td>S V E L</td>
-				</tr>
-			</tbody>
-			<tbody>
-				<tr>
-					<td>TN #5</td>
-					<td>1 2 3</td>
-					<td>1 2 3</td>
-					<td>1 2 3</td>
-					<td>2 3 4 5 6 7</td>
-					<td>FTR: 1-3</td>
-					<td>S V E L</td>
-				</tr>
-			</tbody>
-			<tbody>
-				<tr class='uniqueDesign'>
-					<td colspan='2'>Name: </td>
-					<td colspan='2'>Stats: </td>
-					<td colspan='1'>Cost:</td>
-					<td colspan='2'>Specials:</td>
-				</tr>
-				<tr>
-					<td>UN #6</td>
-					<td>1 2 3</td>
-					<td>1 2 3</td>
-					<td>1 2 3</td>
-					<td>2 3 4 5 6 7</td>
-					<td></td>
-					<td>S V E L</td>
-				</tr>
-			</tbody>
-			<tbody>
-				<tr>
-					<td>R #6</td>
-					<td>1 2</td>
-					<td>1 2</td>
-					<td>1 2 3</td>
-					<td>2 3 4 5 6 7</td>
-					<td>CLoak: 2</td>
-					<td>S V E L</td>
-				</tr>
-			</tbody>
-			<tbody>
-				<tr>
-					<td>SC #6</td>
-					<td>1</td>
-					<td>1</td>
-					<td>1 2 3</td>
-					<td>2 3 4 5 6 7</td>
-					<td>PD: 1 2 3</td>
-					<td>S V E L</td>
-				</tr>
-			</tbody>
-			<tbody>
-				<tr>
-					<td>F #10</td>
-					<td>1</td>
-					<td>1</td>
-					<td>1 2 3</td>
-					<td></td>
-					<td>FTR: 2 3</td>
-					<td>S V E L</td>
-				</tr>
-			</tbody>
-			<tbody>
-				<tr>
-					<td>CV #6</td>
-					<td>1</td>
-					<td>1</td>
-					<td>1 2 3</td>
-					<td>2 3 4 5 6 7</td>
-					<td></td>
-					<td>S V E L</td>
-				</tr>
-			</tbody>
-			<tbody>
-				<tr>
-					<td>SW #5</td>
-					<td>1</td>
-					<td>1</td>
-					<td>1 2 3</td>
-					<td>2 3 4 5 6 7</td>
-					<td>SW: 2 3</td>
-					<td>S V E L</td>
-				</tr>
-			</tbody>
-			<tbody>
-				<tr>
-					<td>BD #6</td>
-					<td></td>
-					<td>1 2</td>
-					<td>1 2 3</td>
-					<td>2 3 4 5 6 7</td>
-					<td>BD: 2</td>
-					<td>S V E L</td>
-				</tr>
-			</tbody>
-			<tbody>
-				<tr>
-					<td>T #6</td>
-					<td>1</td>
-					<td>1</td>
-					<td>1 2 3</td>
-					<td>2 3 4 5 6 7</td>
-					<td>Grnd: 3</td>
-					<td>S V E L</td>
-				</tr>
-			</tbody>
-		</table>
-		<table class="technologySheet">
-			<thead>
-				<tr>
-					<th>Grp</th>
-					<th>Att</th>
-					<th>Def</th>
-					<th>Tactics</th>
-					<th>Move</th>
-					<th>Other</th>
-					<th>Exp.</th>
-				</tr>
-			</thead>
-			<tbody>
+		<div class="technologySheetContainer">
+			<table class="technologySheet">
+				<thead>
+					<tr>
+						<th>Grp</th>
+						<th>Att</th>
+						<th>Def</th>
+						<th>Tactics</th>
+						<th>Move</th>
+						<th>Other</th>
+						<th>Exp.</th>
+					</tr>
+				</thead>
+				<tbody>
+					<tr>
+						<td>FLAG</td>
+						<td>1 2 3</td>
+						<td>1 2 3</td>
+						<td>1 2 3</td>
+						<td>2 3 4 5 6 7</td>
+						<td>E: 1 2 F: 1</td>
+						<td>S V E L</td>
+					</tr>
+				</tbody>
+				<tbody>
+					<tr>
+						<td>DD #6</td>
+						<td>1</td>
+						<td>1</td>
+						<td>1 2 3</td>
+						<td>2 3 4 5 6 7</td>
+						<td>Scan: 1 2</td>
+						<td>S V E L</td>
+					</tr>
+				</tbody>
+				<tbody>
+					<tr>
+						<td>CA #6</td>
+						<td>1 2</td>
+						<td>1 2</td>
+						<td>1 2 3</td>
+						<td>2 3 4 5 6 7</td>
+						<td>Exp: 1 2</td>
+						<td>S V E L</td>
+					</tr>
+				</tbody>
+				<tbody>
+					<tr>
+						<td>BC #6</td>
+						<td>1 2</td>
+						<td>1 2</td>
+						<td>1 2 3</td>
+						<td>2 3 4 5 6 7</td>
+						<td>Fast: 1</td>
+						<td>S V E L</td>
+					</tr>
+				</tbody>
+				<tbody>
+					<tr>
+						<td>BB #6</td>
+						<td>1 2 3</td>
+						<td>1 2 3</td>
+						<td>1 2 3</td>
+						<td>2 3 4 5 6 7</td>
+						<td></td>
+						<td>S V E L</td>
+					</tr>
+				</tbody>
+				<tbody>
+					<tr>
+						<td>DN #5</td>
+						<td>1 2 3</td>
+						<td>1 2 3</td>
+						<td>1 2 3</td>
+						<td>2 3 4 5 6 7</td>
+						<td></td>
+						<td>S V E L</td>
+					</tr>
+				</tbody>
+				<tbody>
+					<tr>
+						<td>TN #5</td>
+						<td>1 2 3</td>
+						<td>1 2 3</td>
+						<td>1 2 3</td>
+						<td>2 3 4 5 6 7</td>
+						<td>FTR: 1-3</td>
+						<td>S V E L</td>
+					</tr>
+				</tbody>
+				<tbody>
+					<tr class='uniqueDesign'>
+						<td colspan='2'>Name: </td>
+						<td colspan='2'>Stats: </td>
+						<td colspan='1'>Cost:</td>
+						<td colspan='2'>Specials:</td>
+					</tr>
+					<tr>
+						<td>UN #6</td>
+						<td>1 2 3</td>
+						<td>1 2 3</td>
+						<td>1 2 3</td>
+						<td>2 3 4 5 6 7</td>
+						<td></td>
+						<td>S V E L</td>
+					</tr>
+				</tbody>
+				<tbody>
+					<tr>
+						<td>R #6</td>
+						<td>1 2</td>
+						<td>1 2</td>
+						<td>1 2 3</td>
+						<td>2 3 4 5 6 7</td>
+						<td>Cloak: 2</td>
+						<td>S V E L</td>
+					</tr>
+				</tbody>
+				<tbody>
+					<tr>
+						<td>SC #6</td>
+						<td>1</td>
+						<td>1</td>
+						<td>1 2 3</td>
+						<td>2 3 4 5 6 7</td>
+						<td>PD: 1 2 3</td>
+						<td>S V E L</td>
+					</tr>
+				</tbody>
+				<tbody>
+					<tr>
+						<td>F #10</td>
+						<td>1</td>
+						<td>1</td>
+						<td>1 2 3</td>
+						<td></td>
+						<td>FTR: 2 3</td>
+						<td>S V E L</td>
+					</tr>
+				</tbody>
+				<tbody>
+					<tr>
+						<td>CV #6</td>
+						<td>1</td>
+						<td>1</td>
+						<td>1 2 3</td>
+						<td>2 3 4 5 6 7</td>
+						<td></td>
+						<td>S V E L</td>
+					</tr>
+				</tbody>
+				<tbody>
+					<tr>
+						<td>SW #5</td>
+						<td>1</td>
+						<td>1</td>
+						<td>1 2 3</td>
+						<td>2 3 4 5 6 7</td>
+						<td>SW: 2 3</td>
+						<td>S V E L</td>
+					</tr>
+				</tbody>
+				<tbody>
+					<tr>
+						<td>BD #6</td>
+						<td></td>
+						<td>1 2</td>
+						<td>1 2 3</td>
+						<td>2 3 4 5 6 7</td>
+						<td>BD: 2</td>
+						<td>S V E L</td>
+					</tr>
+				</tbody>
+				<tbody>
+					<tr>
+						<td>T #6</td>
+						<td>1</td>
+						<td>1</td>
+						<td>1 2 3</td>
+						<td>2 3 4 5 6 7</td>
+						<td>Grnd: 3</td>
+						<td>S V E L</td>
+					</tr>
+				</tbody>
+				<!--tbody>
+					<tr>
+						<td colspan="7">When an "R" appears for Move Tech, read it as the appropriate number. The R is just a reminder that the group gains the React ability at that Move Technology. </td>
+					</tr>
+				</tbody-->
+			</table>
+			<!--table class="technologySheet">
+				<thead>
+					<tr>
+						<th>Grp</th>
+						<th>Att</th>
+						<th>Def</th>
+						<th>Tactics</th>
+						<th>Move</th>
+						<th>Other</th>
+						<th>Exp.</th>
+					</tr>
+				</thead>
+				<tbody>
 
-			</tbody>
-		</table>
-
+				</tbody>
+			</table-->
+		</div>
 	</div>
 </body>
 
