--- a/index.html
+++ b/index.html
@@ -107,14 +107,10 @@
 			clear: both;
 		}
 		table.technologySheet{
-			width: 100%;
-			/*float: left;*/
+			width: 50%;
+			float: left;
 		}
-
-		div.technologySheetContainer {
-			column-count: 2;
-		}
-
+		
 		tbody{
 			border-left: solid thick black;
 			border-right: solid thick black;
@@ -155,7 +151,7 @@
 			font-size: 110%;
 		}
 
-		th:nth-of-type(1),
+		table#productionSheet th:nth-of-type(1),
 		table.technologyProgression td,
 		table.technologyProgression th
 		{
@@ -167,6 +163,33 @@
 		table.technologySheet th{
 			text-align: center;
 		}
+
+		/*table.technologySheet th{
+
+			border-top: solid thick black;
+			border-bottom: solid medium black;
+		
+		}
+
+		table.technologySheet {
+			border-top:none;
+			border-bottom: solid thick black;
+		}
+		table.technologySheet thead{
+			font-size: 100%;
+		}
+
+		table.technologySheet th{
+			font-size: 110%;
+		}*/
+
+		table.technologySheet tbody {
+			border-bottom-width: thin;
+		}
+
+		/*table.technologySheet tbody:nth-child(odd){
+			background-color: #eee;
+		}*/
 
 		th.phase { 
 			text-align: center;
@@ -489,7 +512,33 @@
 						shipType.insertBefore(newNode, template);
 					}
 			}
+
+			var tableRows = table.getElementsByTagName("tr");
+			console.log(tableRows.length);
+
+			var headerRow = table.getElementsByTagName("thead")[0].children[0];
+
+			var middleRow = tableRows[(tableRows.length / 2)];
+			//middleRow.parentNode.insertBefore(headerRow.cloneNode(true), middleRow);
+
+			for (var r = tableRows.length / 2; r < tableRows.length; r++){
+
+			}
+
 		}
+
+		/*function changeTag(element, tagname)
+		{
+			var newElement = document.createElement(tagname);
+
+			while (element.firstChild)
+				newElement.appendChild(element.firstChild);
+
+			for (var index = element.attributes.length - 1; index >= 0; --index)
+    			newElement.attributes.setNamedItem(element.attributes[index].cloneNode());
+  			
+  			element.parentNode.replaceChild(newElement, element);
+		}*/
 
 		function toggleClass(className, visible)
 		{
@@ -512,11 +561,11 @@
 		}
 
 		function toggle_visibility(id) {
-	       var e = document.getElementById(id);
-	       if(e.style.display == 'block')
-	          e.style.display = 'none';
-	       else
-	          e.style.display = 'block';
+	       	var e = document.getElementById(id);
+	      	if(e.style.display == 'block')
+	        	e.style.display = 'none';
+	       	else
+	          	e.style.display = 'block';
 	    }
 
 		function deleteStyleRule(selector)
@@ -590,13 +639,13 @@
 				<li><label><input type="checkbox" id="reactionMovement">10. Reaction Movement</label></li>
 				<li><label><input type="checkbox" id="fastBC">11. Fast Battlecruisers</label></li>
 				<li><label><input type="checkbox" id="groundCombat">14. Transports and Ground Combat</label></li>
-				<li><label><input type="checkbox" disabled>16. Flagships</label></li>
+				<li><label><input type="checkbox" id="flagships">16. Flagships</label></li>
 				<li><label><input type="checkbox" id="researchCenters">17. Research and Industrial Centers</label></li>
 				<li><label><input type="checkbox" id="terraformingNebulae">18. Terraforming Nebulae</label></li>
-				<li><label><input type="checkbox" disabled>19. Unique Ships</label></li>
+				<li><label><input type="checkbox" id="uniqueShips">19. Unique Ships</label></li>
 				<li><label><input type="checkbox" id="slowScientists">20. Slow Scientists</label></li>
 				<li><label><input type="checkbox" id="smartScientists">20. Smart Scientists</label></li>
-				<li><label><input type="checkbox" disabled>20. Bloody Combat</label></li>
+				<!--li><label><input type="checkbox" disabled>20. Bloody Combat</label></li-->
 			</ul>
 		</div>
 	</div>
@@ -966,8 +1015,8 @@
 	</div>
 	<div id="shipTechnologySheet">
 		<h1>Ship Technology Sheet (Circle the Current Technology Level when the Group is built)</h1>
-		<div class="technologySheetContainer">
-			<table class="technologySheet">
+		<div id="technologySheetContainer">
+			<table id="technologySheet1" class="technologySheet">
 				<thead>
 					<tr>
 						<th>Grp</th>
@@ -976,10 +1025,10 @@
 						<th>Tactics</th>
 						<th>Move</th>
 						<th>Other</th>
-						<th>Exp.</th>
+						<th class="enable_experience">Exp.</th>
 					</tr>
 				</thead>
-				<tbody>
+				<tbody class="enable_flagships">
 					<tr>
 						<td>FLAG</td>
 						<td>1 2 3</td>
@@ -987,7 +1036,7 @@
 						<td>1 2 3</td>
 						<td>2 3 4 5 6 7</td>
 						<td>E: 1 2 F: 1</td>
-						<td>S V E L</td>
+						<td class="enable_experience">S V E L</td>
 					</tr>
 				</tbody>
 				<tbody>
@@ -998,7 +1047,7 @@
 						<td>1 2 3</td>
 						<td>2 3 4 5 6 7</td>
 						<td>Scan: 1 2</td>
-						<td>S V E L</td>
+						<td class="enable_experience">S V E L</td>
 					</tr>
 				</tbody>
 				<tbody>
@@ -1009,7 +1058,7 @@
 						<td>1 2 3</td>
 						<td>2 3 4 5 6 7</td>
 						<td>Exp: 1 2</td>
-						<td>S V E L</td>
+						<td class="enable_experience">S V E L</td>
 					</tr>
 				</tbody>
 				<tbody>
@@ -1019,8 +1068,8 @@
 						<td>1 2</td>
 						<td>1 2 3</td>
 						<td>2 3 4 5 6 7</td>
-						<td>Fast: 1</td>
-						<td>S V E L</td>
+						<td><span class="enable_fastBC">Fast: 1</span></td>
+						<td class="enable_experience">S V E L</td>
 					</tr>
 				</tbody>
 				<tbody>
@@ -1031,7 +1080,7 @@
 						<td>1 2 3</td>
 						<td>2 3 4 5 6 7</td>
 						<td></td>
-						<td>S V E L</td>
+						<td class="enable_experience">S V E L</td>
 					</tr>
 				</tbody>
 				<tbody>
@@ -1042,10 +1091,10 @@
 						<td>1 2 3</td>
 						<td>2 3 4 5 6 7</td>
 						<td></td>
-						<td>S V E L</td>
+						<td class="enable_experience">S V E L</td>
 					</tr>
 				</tbody>
-				<tbody>
+				<tbody class="enable_titans">
 					<tr>
 						<td>TN #5</td>
 						<td>1 2 3</td>
@@ -1053,10 +1102,10 @@
 						<td>1 2 3</td>
 						<td>2 3 4 5 6 7</td>
 						<td>FTR: 1-3</td>
-						<td>S V E L</td>
+						<td class="enable_experience">S V E L</td>
 					</tr>
 				</tbody>
-				<tbody>
+				<tbody class="enable_uniqueShips">
 					<tr class='uniqueDesign'>
 						<td colspan='2'>Name: </td>
 						<td colspan='2'>Stats: </td>
@@ -1070,10 +1119,10 @@
 						<td>1 2 3</td>
 						<td>2 3 4 5 6 7</td>
 						<td></td>
-						<td>S V E L</td>
+						<td class="enable_experience">S V E L</td>
 					</tr>
 				</tbody>
-				<tbody>
+				<tbody class="enable_cloaking">
 					<tr>
 						<td>R #6</td>
 						<td>1 2</td>
@@ -1081,7 +1130,7 @@
 						<td>1 2 3</td>
 						<td>2 3 4 5 6 7</td>
 						<td>Cloak: 2</td>
-						<td>S V E L</td>
+						<td class="enable_experience">S V E L</td>
 					</tr>
 				</tbody>
 				<tbody>
@@ -1092,10 +1141,10 @@
 						<td>1 2 3</td>
 						<td>2 3 4 5 6 7</td>
 						<td>PD: 1 2 3</td>
-						<td>S V E L</td>
+						<td class="enable_experience">S V E L</td>
 					</tr>
 				</tbody>
-				<tbody>
+				<tbody class="enable_carriers">
 					<tr>
 						<td>F #10</td>
 						<td>1</td>
@@ -1103,10 +1152,10 @@
 						<td>1 2 3</td>
 						<td></td>
 						<td>FTR: 2 3</td>
-						<td>S V E L</td>
+						<td class="enable_experience">S V E L</td>
 					</tr>
 				</tbody>
-				<tbody>
+				<tbody class="enable_carriers">
 					<tr>
 						<td>CV #6</td>
 						<td>1</td>
@@ -1114,21 +1163,21 @@
 						<td>1 2 3</td>
 						<td>2 3 4 5 6 7</td>
 						<td></td>
-						<td>S V E L</td>
+						<td class="enable_experience">S V E L</td>
 					</tr>
 				</tbody>
-				<tbody>
+				<tbody class="enable_mines">
 					<tr>
 						<td>SW #5</td>
 						<td>1</td>
 						<td>1</td>
 						<td>1 2 3</td>
 						<td>2 3 4 5 6 7</td>
-						<td>SW: 2 3</td>
-						<td>S V E L</td>
+						<td>SW: 2 <span class="enable_mineSweeper3">3</span></td>
+						<td class="enable_experience">S V E L</td>
 					</tr>
 				</tbody>
-				<tbody>
+				<tbody class="enable_boarding">
 					<tr>
 						<td>BD #6</td>
 						<td></td>
@@ -1136,10 +1185,10 @@
 						<td>1 2 3</td>
 						<td>2 3 4 5 6 7</td>
 						<td>BD: 2</td>
-						<td>S V E L</td>
+						<td class="enable_experience">S V E L</td>
 					</tr>
 				</tbody>
-				<tbody>
+				<tbody class="enable_groundCombat">
 					<tr>
 						<td>T #6</td>
 						<td>1</td>
@@ -1147,7 +1196,7 @@
 						<td>1 2 3</td>
 						<td>2 3 4 5 6 7</td>
 						<td>Grnd: 3</td>
-						<td>S V E L</td>
+						<td class="enable_experience">S V E L</td>
 					</tr>
 				</tbody>
 				<!--tbody>
@@ -1156,7 +1205,7 @@
 					</tr>
 				</tbody-->
 			</table>
-			<!--table class="technologySheet">
+			<table id="technologySheet1" class="technologySheet">
 				<thead>
 					<tr>
 						<th>Grp</th>
@@ -1168,10 +1217,7 @@
 						<th>Exp.</th>
 					</tr>
 				</thead>
-				<tbody>
-
-				</tbody>
-			</table-->
+			</table>
 		</div>
 	</div>
 </body>
