--- a/index.html
+++ b/index.html
@@ -164,6 +164,10 @@
 			text-align: center;
 		}
 
+		/*table.technologySheet {
+			border: solid thick black;
+		}*/
+
 		/*table.technologySheet th{
 
 			border-top: solid thick black;
@@ -171,10 +175,6 @@
 		
 		}
 
-		table.technologySheet {
-			border-top:none;
-			border-bottom: solid thick black;
-		}
 		table.technologySheet thead{
 			font-size: 100%;
 		}
@@ -1034,7 +1034,7 @@
 						<td>1 2 3</td>
 						<td>1 2 3</td>
 						<td>1 2 3</td>
-						<td>2 3 4 5 6 7</td>
+						<td>2 3 4 5 6 <span class="enable_movement">7</span></td>
 						<td>E: 1 2 F: 1</td>
 						<td class="enable_experience">S V E L</td>
 					</tr>
@@ -1045,7 +1045,7 @@
 						<td>1</td>
 						<td>1</td>
 						<td>1 2 3</td>
-						<td>2 3 4 5 6 7</td>
+						<td>2 3 4 5 6 <span class="enable_movement">7</span></td>
 						<td>Scan: 1 2</td>
 						<td class="enable_experience">S V E L</td>
 					</tr>
@@ -1056,7 +1056,7 @@
 						<td>1 2</td>
 						<td>1 2</td>
 						<td>1 2 3</td>
-						<td>2 3 4 5 6 7</td>
+						<td>2 3 4 5 6 <span class="enable_movement">7</span></td>
 						<td>Exp: 1 2</td>
 						<td class="enable_experience">S V E L</td>
 					</tr>
@@ -1067,7 +1067,7 @@
 						<td>1 2</td>
 						<td>1 2</td>
 						<td>1 2 3</td>
-						<td>2 3 4 5 6 7</td>
+						<td>2 3 4 5 6 <span class="enable_movement">7</span></td>
 						<td><span class="enable_fastBC">Fast: 1</span></td>
 						<td class="enable_experience">S V E L</td>
 					</tr>
@@ -1078,7 +1078,7 @@
 						<td>1 2 3</td>
 						<td>1 2 3</td>
 						<td>1 2 3</td>
-						<td>2 3 4 5 6 7</td>
+						<td>2 3 4 5 6 <span class="enable_movement">7</span></td>
 						<td></td>
 						<td class="enable_experience">S V E L</td>
 					</tr>
@@ -1089,7 +1089,7 @@
 						<td>1 2 3</td>
 						<td>1 2 3</td>
 						<td>1 2 3</td>
-						<td>2 3 4 5 6 7</td>
+						<td>2 3 4 5 6 <span class="enable_movement">7</span></td>
 						<td></td>
 						<td class="enable_experience">S V E L</td>
 					</tr>
@@ -1100,7 +1100,7 @@
 						<td>1 2 3</td>
 						<td>1 2 3</td>
 						<td>1 2 3</td>
-						<td>2 3 4 5 6 7</td>
+						<td>2 3 4 5 6 <span class="enable_movement">7</span></td>
 						<td>FTR: 1-3</td>
 						<td class="enable_experience">S V E L</td>
 					</tr>
@@ -1117,7 +1117,7 @@
 						<td>1 2 3</td>
 						<td>1 2 3</td>
 						<td>1 2 3</td>
-						<td>2 3 4 5 6 7</td>
+						<td>2 3 4 5 6 <span class="enable_movement">7</span></td>
 						<td></td>
 						<td class="enable_experience">S V E L</td>
 					</tr>
@@ -1128,7 +1128,7 @@
 						<td>1 2</td>
 						<td>1 2</td>
 						<td>1 2 3</td>
-						<td>2 3 4 5 6 7</td>
+						<td>2 3 4 5 6 <span class="enable_movement">7</span></td>
 						<td>Cloak: 2</td>
 						<td class="enable_experience">S V E L</td>
 					</tr>
@@ -1139,7 +1139,7 @@
 						<td>1</td>
 						<td>1</td>
 						<td>1 2 3</td>
-						<td>2 3 4 5 6 7</td>
+						<td>2 3 4 5 6 <span class="enable_movement">7</span></td>
 						<td>PD: 1 2 3</td>
 						<td class="enable_experience">S V E L</td>
 					</tr>
@@ -1161,7 +1161,7 @@
 						<td>1</td>
 						<td>1</td>
 						<td>1 2 3</td>
-						<td>2 3 4 5 6 7</td>
+						<td>2 3 4 5 6 <span class="enable_movement">7</span></td>
 						<td></td>
 						<td class="enable_experience">S V E L</td>
 					</tr>
@@ -1172,7 +1172,7 @@
 						<td>1</td>
 						<td>1</td>
 						<td>1 2 3</td>
-						<td>2 3 4 5 6 7</td>
+						<td>2 3 4 5 6 <span class="enable_movement">7</span></td>
 						<td>SW: 2 <span class="enable_mineSweeper3">3</span></td>
 						<td class="enable_experience">S V E L</td>
 					</tr>
@@ -1183,7 +1183,7 @@
 						<td></td>
 						<td>1 2</td>
 						<td>1 2 3</td>
-						<td>2 3 4 5 6 7</td>
+						<td>2 3 4 5 6 <span class="enable_movement">7</span></td>
 						<td>BD: 2</td>
 						<td class="enable_experience">S V E L</td>
 					</tr>
@@ -1194,7 +1194,7 @@
 						<td>1</td>
 						<td>1</td>
 						<td>1 2 3</td>
-						<td>2 3 4 5 6 7</td>
+						<td>2 3 4 5 6 <span class="enable_movement">7</span></td>
 						<td>Grnd: 3</td>
 						<td class="enable_experience">S V E L</td>
 					</tr>
