Hide ship tech sheet for now

--- a/index.html
+++ b/index.html
@@ -105,6 +105,10 @@
         height: 1em;
       }
 
+      #shipTechnologySheet{
+        display: none;
+      }
+
       #shipTechnologySheet h1 {
         clear: both;
       }
@@ -760,7 +764,7 @@
                   <th>Maint. Decrease (losses)</th>
                   <td></td>
                 </tr>
-				
+
                 <tr class="divider enable_researchCenters">
                   <td></td>
                   <td></td>
