--- a/index.html
+++ b/index.html
@@ -92,8 +92,12 @@
       }
 
       table.technologyProgression {
-        width: 33%;
+        width: 29.5%;
         float: left;
+      }
+
+      table.technologyProgression:nth-of-type(1){
+        width: 40%;
       }
 
       table.technologyProgression:nth-of-type(1),
@@ -180,6 +184,11 @@
         vertical-align: top;
       }
 
+      table#productionSheet tr.technologySpendingRP {
+        height: 4em;
+        vertical-align: top;
+      }
+
       table#productionSheet tr {
         height: 1em;
       }
@@ -239,7 +248,7 @@
         border: none;
       }
       tr.sum {
-        background-color: #eee;
+        background-color: #ddd;
       }
 
       tr.header th {
@@ -257,6 +266,7 @@
 
       .tech-cost {
         margin-right: 0.5em;
+        margin-left: 0.5em;
       }
 
       .miners {
@@ -270,14 +280,14 @@
           height: 100%;
           margin: 1em;
           padding: 0em;
-          size: auto landscape;
+          size: landscape;
         }
         #setup,
         #menuBtn {
           display: none;
         }
 
-			html,body{
+			  html,body{
           margin: 0;
           padding: 0;
           width: 100%;
@@ -290,14 +300,7 @@
         }
 
         #productionSheetAndTech {
-          /*width: 100%;
-				height: 100%;*/
           page-break-after: always;
-        }
-
-        table#productionSheet {
-          height: 100%;
-          width: 100%;
         }
 
         tr {
@@ -661,6 +664,15 @@
 				<li><label><input type="checkbox" id="cloaking">12. Raiders: Cloaking and Scanners</label></li>
 				<li><label><input type="checkbox" id="mines">13. Mines and Mine Sweepers</label></li>
         </ul>
+
+        <h2>Replicators</h2>
+
+        <ul>
+				<li><label><input type="checkbox" id="replicatorsTechCosts" disabled>2. Updated technology costs</label></li>
+				<li><label><input type="checkbox" id="advancedConstruction">4. Advanced construction</label></li>
+				<li><label><input type="checkbox" id="resourceCards">6. Resource Cards</label></li>
+				<li><label><input type="checkbox" id="replicators">7. Replicators</label></li>
+        </ul>
       </div>
       <div class="setupColumn">
         <h2>Close Encounters</h2>
@@ -676,14 +688,16 @@
 				<li><label><input type="checkbox" id="reactionMovement">10. Reaction Movement</label></li>
 				<li><label><input type="checkbox" id="fastBC">11. Fast Battlecruisers</label></li>
 				<li><label><input type="checkbox" id="groundCombat">14. Transports and Ground Combat</label></li>
-				<li><label><input type="checkbox" id="flagships">16. Flagships</label></li>
+				<li><label><input type="checkbox" id="flagships" disabled>16. Flagships</label></li>
 				<li><label><input type="checkbox" id="researchCenters">17. Research and Industrial Centers</label></li>
 				<li><label><input type="checkbox" id="terraformingNebulae">18. Terraforming Nebulae</label></li>
-				<li><label><input type="checkbox" id="uniqueShips">19. Unique Ships</label></li>
+				<li><label><input type="checkbox" id="uniqueShips" disabled>19. Unique Ships</label></li>
 				<li><label><input type="checkbox" id="slowScientists">20. Slow Scientists</label></li>
 				<li><label><input type="checkbox" id="smartScientists">20. Smart Scientists</label></li>
           <!--li><label><input type="checkbox" disabled>20. Bloody Combat</label></li-->
         </ul>
+      </div>
+      <div class="setupColumn">
       </div>
     </div>
 
@@ -710,7 +724,7 @@
                   <td></td>
                 </tr>
                 <tr>
-                  <th>+ Mineral CPs</th>
+                  <th>+ Mineral<span class="enable_resourceCards"> / Resource</span> CPs</th>
                   <td></td>
                 </tr>
                 <tr class="enable_msPipelines">
@@ -792,7 +806,7 @@
                   <th>Total RP</th>
                   <td></td>
                 </tr>
-                <tr class="technologySpending enable_researchCenters">
+                <tr class="technologySpendingRP enable_researchCenters">
                   <th>- Technology spending</th>
                   <td></td>
                 </tr>
@@ -841,10 +855,11 @@
               <td>
                 <span class="tech-cost">1<sub>20</sub></span>
                 <span class="tech-cost">2<sub>30</sub></span>
-							<span class="tech-cost">3
+							  <span class="tech-cost">3
                   <sub class="disable_updatedTechCosts">40</sub>
                   <sub class="enable_updatedTechCosts">30</sub>
                 </span>
+                <span class="tech-cost enable_advancedConstruction">4<sub>10</sub></span>
               </td>
             </tr>
             <tr>
@@ -898,6 +913,35 @@
                 <span class="tech-cost enable_movement">7<sub>20</sub></span>
               </td>
             </tr>
+            <tr class="enable_carriers">
+              <td>Fighters</td>
+              <td>0</td>
+              <td>
+                <span class="tech-cost">1<sub>25</sub></span>
+                <span class="tech-cost">2<sub>30</sub></span>
+                <span class="tech-cost">3<sub>40</sub></span>
+                <span class="tech-cost enable_advancedConstruction">4<sub>25</sub></span>
+              </td>
+            </tr>
+            <tr class="enable_carriers">
+              <td>Point Def.</td>
+              <td>0</td>
+              <td>
+                <span class="tech-cost">1<sub>20</sub></span>
+                <span class="tech-cost">2<sub>25</sub></span>
+                <span class="tech-cost">3<sub>30</sub></span>
+              </td>
+            </tr>
+        </table>
+        <table class="technologyProgression">
+          <thead>
+            <tr>
+              <th>Tech</th>
+              <th>Start</th>
+              <th>Level<sub>Cost</sub></th>
+            </tr>
+          </thead>
+          <tbody>
             <tr>
               <td>Ship Yard</td>
               <td>1</td>
@@ -912,34 +956,6 @@
               <td>
                 <span class="tech-cost">2<sub>10</sub></span>
                 <span class="tech-cost">3<sub>15</sub></span>
-              </td>
-            </tr>
-        </table>
-        <table class="technologyProgression">
-          <thead>
-            <tr>
-              <th>Tech</th>
-              <th>Start</th>
-              <th>Level<sub>Cost</sub></th>
-            </tr>
-          </thead>
-          <tbody>
-            <tr class="enable_carriers">
-              <td>Fighters</td>
-              <td>0</td>
-              <td>
-                <span class="tech-cost">1<sub>25</sub></span>
-                <span class="tech-cost">2<sub>30</sub></span>
-                <span class="tech-cost">3<sub>40</sub></span>
-              </td>
-            </tr>
-            <tr class="enable_carriers">
-              <td>Point Def.</td>
-              <td>0</td>
-              <td>
-                <span class="tech-cost">1<sub>20</sub></span>
-                <span class="tech-cost">2<sub>25</sub></span>
-                <span class="tech-cost">3<sub>30</sub></span>
               </td>
             </tr>
             <tr>
@@ -971,16 +987,6 @@
               </td>
             </tr>
             <tr class="enable_mines">
-              <td>Mines</td>
-              <td>0</td>
-              <td>
-							<span class="tech-cost">1
-                  <sub class="disable_updatedTechCosts">20</sub>
-                  <sub class="enable_updatedTechCosts">30</sub>
-                </span>
-              </td>
-            </tr>
-            <tr class="enable_mines">
               <td>Mine Sweeper</td>
               <td>0</td>
               <td>
@@ -990,6 +996,22 @@
                   <sub class="enable_updatedTechCosts">15</sub>
                 </span>
 							<span class="tech-cost enable_mineSweeper3">3<sub>20</sub></span>
+              </td>
+            </tr>
+            <tr class="enable_advancedConstruction">
+              <td>Advanced Con.</td>
+              <td>0</td>
+              <td>
+                <span class="tech-cost">1<sub>10</sub></span>
+                <span class="tech-cost">2<sub>10</sub></span>
+                <span class="tech-cost">3<sub>10</sub></span>
+              </td>
+            </tr>
+            <tr class="enable_replicators">
+              <td>Anti-Replicator</td>
+              <td>0</td>
+              <td>
+                <span class="tech-cost">1<sub>10</sub></span>
               </td>
             </tr>
         </table>
@@ -1039,6 +1061,31 @@
               <td>0</td>
               <td>
                 <span class="tech-cost">1<sub>10</sub></span>
+                <span class="tech-cost enable_advancedConstruction">2<sub>10</sub></span>
+              </td>
+            </tr>
+            <tr class="enable_mines">
+              <td>Mines</td>
+              <td>0</td>
+              <td>
+							<span class="tech-cost">1
+                  <sub class="disable_updatedTechCosts">20</sub>
+                  <sub class="enable_updatedTechCosts">30</sub>
+                </span>
+              </td>
+            </tr>
+            <tr class="enable_advancedConstruction">
+              <td>Tractor Beam</td>
+              <td>0</td>
+              <td>
+                <span class="tech-cost">1<sub>10</sub></span>
+              </td>
+            </tr>
+            <tr class="enable_advancedConstruction">
+              <td>Shield Proj.</td>
+              <td>0</td>
+              <td>
+                <span class="tech-cost">1<sub>15</sub></span>
               </td>
             </tr>
           </tbody>
